--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -5,6 +5,8 @@
   position: sticky;
   top: 0;
   background-color: $whiteColor;
+  left: 0;
+  background-color: #fff;
   .header-inner {
     max-width: 1440px;
     margin: 0 240px;
